# genai-code-usage-monitor

./: .gitignore  .ruff.toml  CHANGELOG.md  CI_CD_SUMMARY.md  CLAUDE_FEATURE_PARITY_SUMMARY.md  CLAUDE_PLATFORM_ENHANCEMENT_PLAN.md  CLAUDE_PLATFORM_FEATURE_COMPARISON_REPORT.md  CONTRIBUTING.md  DELIVERY_REPORT.md  DUAL_PLATFORM_CHECKLIST.md  DUAL_PLATFORM_REFACTOR_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FEATURE_CHECKLIST.md  FILES_CREATED_AND_MODIFIED.txt  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_TEST_REPORT.md  LICENSE  MIGRATION_GUIDE.md  OPTIMIZATION_COMPLETE.md  PLATFORM_LAYER_SUMMARY.md  PLATFORM_QUICK_REFERENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.zh-CN.md  README_CI_SETUP.md  THEME_ENHANCEMENT_SUMMARY.md  THEME_SYSTEM.md  USAGE_GUIDE.md  VISUALIZATION_GUIDE.md  VISUAL_EXAMPLES.md  install.sh  pyproject.toml  requirements.txt  start_monitor.sh  test_dual_platform_cli.py  validate_implementation.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  pr-labeler.yml  release.yml  tests.yml
Formula/: code-monitor.rb
docs/: CACHE_AND_ALERTS.md  DUAL_PLATFORM_DISPLAY.md  INSTALLATION_VERIFICATION.md  SCREENSHOTS.md  TEST_MATRIX.md  TEST_RESULTS.md  THEME_QUICKSTART.md
examples/: cache_and_alerts_demo.py  dual_platform_display_example.py  example_usage.py  platform_demo.py  theme_demo.py  unified_demo.py  visualization_demo.py
src/genai_code_usage_monitor/: __init__.py  __main__.py  _version.py
src/genai_code_usage_monitor/cli/: main.py
src/genai_code_usage_monitor/core/: alerts.py  models.py  p90_calculator.py  plans.py  pricing.py  settings.py
src/genai_code_usage_monitor/data/: api_client.py
src/genai_code_usage_monitor/ui/: __init__.py  components.py  display.py  display_controller.py  layouts.py  progress_bars.py  session_display.py  table_views.py  theme_switcher.py  themes.py  visualizations.py
src/genai_code_usage_monitor/utils/: time_utils.py
tests/: test_multiplatform_integration.py  test_platforms.py  test_themes.py
tests/test_cli/: TEST_COVERAGE_SUMMARY.md  test_main.py
tests/test_core/: test_alerts.py  test_p90_calculator.py
tests/test_installation/: __init__.py  test_package.py
